# seiscope_opt_toolbox_w_ctypes

./: .coveragerc  .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE.md  MANIFEST.in  README.md  build.sh  config.cmake  fpm.toml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  seiscope_opt_toolbox_w_ctypes.fobis  setup.cfg  setup.py  test_subprocess.py  version.py
.github/workflows/: CI.yml  build_wheels.yml  flake8.yml  fortran.yml  python.yml
app/LBFGS/: CMakeLists.txt  test_LBFGS.f90
app/PLBFGS/: CMakeLists.txt  test_PLBFGS.f90
app/PNLCG/: CMakeLists.txt  test_PNLCG.f90
app/PSTD/: CMakeLists.txt  test_PSTD.f90
app/PTRN/: CMakeLists.txt  test_PTRN.f90
app/TRN/: CMakeLists.txt  test_TRN.f90
cmake/: sotb.cmake
cmake/export/: sotb-config.cmake.in
examples/: example.py  fwi.py  lsrtm_aniso.py  plot_curves.py
fortran/src/: Makefile  merged-LBFGS.f90  merged-PNLCG.f90  merged-PTRN.f90
fortran/src/tests/: test_PNLCG.f90
python/: interface.py
seiscope_opt_tb_wrapper/: interface.py
seiscope_opt_tb_wrapper/examples/: fwi.py  lsrtm_aniso.py  pathmagic.py  plot_curves.py  rosenbrock.ipynb
seiscope_opt_tb_wrapper/examples/c_code/: Makefile
sotb/wrapper/: _version.py  interface.py
sotb/wrapper/examples/: fwi.py  lsrtm_aniso.py  rosenbrock.ipynb
sotb/wrapper/examples/c_code/: main.c  optim_bc.h
sotb_wrapper/: __init__.py  _version.py  interface.py
sotb_wrapper/examples/: fwi.py  lsrtm_aniso.py  plot_curves.py  rosenbrock.ipynb
sotb_wrapper/examples/c_code/: CMakeLists.txt  main.c  optim_bc.h
src/: CMakeLists.txt  mdle_typedef.f90  merged-LBFGS.f90  merged-PLBFGS.f90  merged-PNLCG.f90  merged-PSTD.f90  merged-PTRN.f90  merged-TRN.f90  merged-common.f90  seiscope_optimization_toolbox.f90
src/fortran/: Makefile  mdle_typedef.f90  merged-LBFGS.f90  merged-PLBFGS.f90  merged-PNLCG.f90  merged-PSTD.f90  merged-common.f90  test_PNLCG.f90
src/python/: example.py  fwi.py  interface.py  lsrtm_aniso.py  plot_curves.py
src/sotb/: CMakeLists.txt  mdle_typedef.f90  merged-LBFGS.f90  merged-PLBFGS.f90  merged-PNLCG.f90  merged-PSTD.f90  merged-PTRN.f90  merged-TRN.f90  merged-common.f90
src/tests/: test_LBFGS.f90  test_PLBFGS.f90  test_PNLCG.f90  test_PSTD.f90  test_PTRN.f90  test_TRN.f90
test/: __init__.py  test_correctness.py
tests/: pathmagic.py  test_correctness.py
